@@ -1,6 +1,7 @@
 package com.robertx22.age_of_exile.database.data.unique_items;
 
 import com.google.gson.JsonObject;
+import com.robertx22.age_of_exile.database.IByteBuf;
 import com.robertx22.age_of_exile.database.base.Rarities;
 import com.robertx22.age_of_exile.database.data.StatModifier;
 import com.robertx22.age_of_exile.database.data.gear_types.bases.BaseGearType;
@@ -21,6 +22,7 @@ import com.robertx22.age_of_exile.uncommon.interfaces.data_items.IRarity;
 import com.robertx22.age_of_exile.uncommon.interfaces.data_items.ITiered;
 import net.minecraft.item.Item;
 import net.minecraft.item.Items;
+import net.minecraft.network.PacketByteBuf;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.registry.Registry;
 
@@ -28,7 +30,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 
-public final class UniqueGear implements IBaseGearType, ITiered, IAutoLocName, IAutoLocDesc,
+public final class UniqueGear implements IByteBuf<UniqueGear>, IBaseGearType, ITiered, IAutoLocName, IAutoLocDesc,
     ISerializedRegistryEntry<UniqueGear>, ISerializable<UniqueGear> {
 
     public static UniqueGear SERIALIZER = new UniqueGear();
@@ -37,10 +39,32 @@ public final class UniqueGear implements IBaseGearType, ITiered, IAutoLocName, I
     int tier;
     int weight = 1000;
     String guid;
-    String langNameID;
-    String langDescID;
     String gearType;
     Identifier itemID;
+
+    @Override
+    public UniqueGear getFromBuf(PacketByteBuf buf) {
+        UniqueGear uniq = new UniqueGear();
+
+        int amount = buf.readInt();
+        for (int i = 0; i < amount; i++) {
+            uniq.uniqueStats.add(StatModifier.EMPTY.getFromBuf(buf));
+        }
+        uniq.guid = buf.readString(50);
+        uniq.gearType = buf.readString(50);
+        uniq.itemID = buf.readIdentifier();
+
+        return uniq;
+    }
+
+    @Override
+    public void toBuf(PacketByteBuf buf) {
+        buf.writeInt(this.uniqueStats.size());
+        uniqueStats.forEach(x -> x.toBuf(buf));
+        buf.writeString(guid, 50);
+        buf.writeString(gearType, 50);
+        buf.writeIdentifier(itemID);
+    }
 
     transient String langName;
     transient String langDesc;
@@ -73,8 +97,6 @@ public final class UniqueGear implements IBaseGearType, ITiered, IAutoLocName, I
         UniqueGear uniq = new UniqueGear();
 
         uniq.guid = getGUIDFromJson(json);
-        uniq.langNameID = getLangNameStringFromJson(json);
-        uniq.langDescID = getLangDescStringFromJson(json);
         uniq.tier = getTierFromJson(json);
         uniq.weight = getWeightFromJson(json);
 
@@ -211,12 +233,12 @@ public final class UniqueGear implements IBaseGearType, ITiered, IAutoLocName, I
 
     @Override
     public String locDescLangFileGUID() {
-        return langDescID;
+        return "item." + this.itemID + ".desc";
     }
 
     @Override
     public String locNameLangFileGUID() {
-        return langNameID;
+        return "item." + this.itemID;
     }
 
     @Override
