@@ -1,6 +1,8 @@
 package com.robertx22.age_of_exile.mmorpg.registers.client;
 
 import com.robertx22.age_of_exile.vanilla_mc.packets.*;
+import com.robertx22.age_of_exile.vanilla_mc.packets.registry.EfficientRegistryPacket;
+import com.robertx22.age_of_exile.vanilla_mc.packets.registry.RegistryPacket;
 import com.robertx22.age_of_exile.vanilla_mc.packets.spells.TellClientToCastSpellPacket;
 import com.robertx22.age_of_exile.vanilla_mc.packets.sync_cap.SyncCapabilityToClient;
 import com.robertx22.library_of_exile.main.Packets;
