@@ -4,8 +4,9 @@ import com.robertx22.age_of_exile.vanilla_mc.packets.ModifyItemPacket;
 import com.robertx22.age_of_exile.vanilla_mc.packets.RequestAreaSyncPacket;
 import com.robertx22.age_of_exile.vanilla_mc.packets.SpendStatPointsPacket;
 import com.robertx22.age_of_exile.vanilla_mc.packets.perks.PerkChangePacket;
-import com.robertx22.age_of_exile.vanilla_mc.packets.spells.TellServerToCastSpellPacket;
+import com.robertx22.age_of_exile.vanilla_mc.packets.registry.RequestRegistriesPacket;
 import com.robertx22.age_of_exile.vanilla_mc.packets.spells.HotbarSetupPacket;
+import com.robertx22.age_of_exile.vanilla_mc.packets.spells.TellServerToCastSpellPacket;
 import com.robertx22.age_of_exile.vanilla_mc.packets.sync_cap.RequestSyncCapToClient;
 import com.robertx22.library_of_exile.main.Packets;
 
@@ -20,6 +21,7 @@ public class C2SPacketRegister {
         Packets.registerClientToServerPacket(new TellServerToCastSpellPacket());
         Packets.registerClientToServerPacket(new RequestAreaSyncPacket());
         Packets.registerClientToServerPacket(new PerkChangePacket());
+        Packets.registerClientToServerPacket(new RequestRegistriesPacket());
 
     }
 
